force-app/main/default/objects/Campaign_Employee__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to the Campaign</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Campaign</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>