force-app/main/default/objects/Campaign_Employee__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to the Employee</description>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliated Campaigns</relationshipLabel>
    <relationshipName>Affiliated_Campaigns</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>