force-app/main/default/objects/Campaign_Employee__c/fields/Long_URL__c.field-meta.xml
<CustomField>
    <fullName>Long_URL__c</fullName>
    <formula>Store_Front_URL__c + &quot;/?utm_medium=salesforce%26utm_source=&quot; + Employee__r.Referral_Code__c + &quot;%26utm_campaign=&quot; + Campaign__r.Affiliate_Code__c</formula>
    <label>Long URL</label>
    <type>Text</type>
</CustomField>