force-app/main/default/objects/Campaign_Employee__c/fields/QR_Code_Content_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>QR_Code_Content_Version_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QR Code Content Version Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>