force-app/main/default/objects/Campaign_Employee__c/fields/Short_URL__c.field-meta.xml
<CustomField>
    <fullName>Short_URL__c</fullName>
    <description>This is where Bilty&apos;s shorten URL will be stored</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Short URL</label>
    <type>Url</type>
</CustomField>