force-app/main/default/objects/Campaign_Employee__c/fields/Store_Front_URL__c.field-meta.xml
<CustomField>
    <fullName>Store_Front_URL__c</fullName>
    <defaultValue>&apos;https://shop.10xhealthsystem.com/&apos;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This can be product-specific or the store&apos;s home page. Either way, it needs to be the full URL of the storefront.</inlineHelpText>
    <label>Store Front URL</label>
    <type>Url</type>
</CustomField>